Prevent undo button jumping around

--- a/dcc-portal-ui/app/scripts/survivalanalysis/styles/survival-analysis.scss
+++ b/dcc-portal-ui/app/scripts/survivalanalysis/styles/survival-analysis.scss
@@ -80,6 +80,9 @@ $faded: #e6dede;
     &:hover {
       transform: scale(1.1);
     }
+    &.disabled {
+      visibility: hidden;
+    }
   }
 
   .survival-graph {
